content/_generated-doc/3.6/config/quarkus-opentelemetry-general-config-items.adoc

:summaryTableId: quarkus-opentelemetry-general-config-items
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-opentelemetry-general-config-items_configuration]]link:#quarkus-opentelemetry-general-config-items_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-opentelemetry-general-config-items_quarkus.otel.traces.exporter]]`link:#quarkus-opentelemetry-general-config-items_quarkus.otel.traces.exporter[quarkus.otel.traces.exporter]`


[.description]
--
List of exporters supported by Quarkus.

List of exporters to be used for tracing, separated by commas. Has one of the values on `ExporterType` `otlp`, `cdi`, `none` or the full qualified name of a class implementing `io.opentelemetry.sdk.trace.export.SpanExporter`

Default on Quarkus is `ExporterType.Constants++#++CDI_VALUE`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_TRACES_EXPORTER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_TRACES_EXPORTER+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|`cdi`


a|icon:lock[title=Fixed at build time] [[quarkus-opentelemetry-general-config-items_quarkus.otel.traces.sampler]]`link:#quarkus-opentelemetry-general-config-items_quarkus.otel.traces.sampler[quarkus.otel.traces.sampler]`


[.description]
--
The sampler to use for tracing.

Has one of the values on `SamplerType` `always_on`, `always_off`, `traceidratio`, `parentbased_always_on`, `parentbased_always_off`, `parentbased_traceidratio` or the Sampler SPI name. This will use the OTel SPI hooks for the `io.opentelemetry.sdk.trace.samplers.Sampler` implementation set in the provider: `io.opentelemetry.sdk.autoconfigure.spi.traces.ConfigurableSamplerProvider`.

Fallbacks to the legacy property `quarkus.opentelemetry.tracer.sampler.sampler.name` or defaults to `SamplerType.Constants++#++PARENT_BASED_ALWAYS_ON`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_TRACES_SAMPLER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_TRACES_SAMPLER+++`
endif::add-copy-button-to-env-var[]
--|string 
|`parentbased_always_on`


a|icon:lock[title=Fixed at build time] [[quarkus-opentelemetry-general-config-items_quarkus.otel.traces.eusp.enabled]]`link:#quarkus-opentelemetry-general-config-items_quarkus.otel.traces.eusp.enabled[quarkus.otel.traces.eusp.enabled]`


[.description]
--
Enable the `io.quarkus.opentelemetry.runtime.exporter.otlp.EndUserSpanProcessor`.

The `io.quarkus.opentelemetry.runtime.exporter.otlp.EndUserSpanProcessor` adds the `io.opentelemetry.semconv.trace.attributes.SemanticAttributes.ENDUSER_ID` and `io.opentelemetry.semconv.trace.attributes.SemanticAttributes.ENDUSER_ROLE` to the Span.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_TRACES_EUSP_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_TRACES_EUSP_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-opentelemetry-general-config-items_quarkus.otel.traces.suppress-non-application-uris]]`link:#quarkus-opentelemetry-general-config-items_quarkus.otel.traces.suppress-non-application-uris[quarkus.otel.traces.suppress-non-application-uris]`


[.description]
--
Suppress non-application uris from trace collection. This will suppress tracing of `/q` endpoints.

Providing a custom `io.opentelemetry.sdk.trace.samplers.Sampler` CDI Bean will ignore this setting.

This is a Quarkus specific property. Suppressing non-application uris is enabled by default.

Fallbacks to the legacy property `quarkus.opentelemetry.tracer.suppress-non-application-uris` or defaults to `true`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_TRACES_SUPPRESS_NON_APPLICATION_URIS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_TRACES_SUPPRESS_NON_APPLICATION_URIS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-opentelemetry-general-config-items_quarkus.otel.traces.include-static-resources]]`link:#quarkus-opentelemetry-general-config-items_quarkus.otel.traces.include-static-resources[quarkus.otel.traces.include-static-resources]`


[.description]
--
Include static resources from trace collection.

This is a Quarkus specific property. Include static resources is disabled by default. Providing a custom `io.opentelemetry.sdk.trace.samplers.Sampler` CDI Bean will ignore this setting.

Fallbacks to the legacy property `quarkus.opentelemetry.tracer.include-static-resources` or defaults to `false`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_TRACES_INCLUDE_STATIC_RESOURCES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_TRACES_INCLUDE_STATIC_RESOURCES+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-opentelemetry-general-config-items_quarkus.otel.traces.sampler.arg]]`link:#quarkus-opentelemetry-general-config-items_quarkus.otel.traces.sampler.arg[quarkus.otel.traces.sampler.arg]`


[.description]
--
Sampler argument. Depends on the `quarkus.otel.traces.sampler` property. Fallbacks to the legacy property `quarkus.opentelemetry.tracer.sampler.ratio`.

When setting the stock sampler to `traceidratio` or `parentbased_traceidratio` you need to set a `double` compatible value between `0.0d` and `1.0d`, like `0.01d` or `0.5d`. It is kept as a `String` to allow the flexible customisation of alternative samplers.

Defaults to `1.0d`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_TRACES_SAMPLER_ARG+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_TRACES_SAMPLER_ARG+++`
endif::add-copy-button-to-env-var[]
--|string 
|`1.0d`


a| [[quarkus-opentelemetry-general-config-items_quarkus.otel.attribute.value.length.limit]]`link:#quarkus-opentelemetry-general-config-items_quarkus.otel.attribute.value.length.limit[quarkus.otel.attribute.value.length.limit]`


[.description]
--
The maximum length of attribute values. Applies to spans and logs.

By default, there is no limit.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_ATTRIBUTE_VALUE_LENGTH_LIMIT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_ATTRIBUTE_VALUE_LENGTH_LIMIT+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-opentelemetry-general-config-items_quarkus.otel.attribute.count.limit]]`link:#quarkus-opentelemetry-general-config-items_quarkus.otel.attribute.count.limit[quarkus.otel.attribute.count.limit]`


[.description]
--
The maximum number of attributes. Applies to spans, span events, span links, and logs.

Default is `128`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_ATTRIBUTE_COUNT_LIMIT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_ATTRIBUTE_COUNT_LIMIT+++`
endif::add-copy-button-to-env-var[]
--|int 
|`128`


a| [[quarkus-opentelemetry-general-config-items_quarkus.otel.span.attribute.value.length.limit]]`link:#quarkus-opentelemetry-general-config-items_quarkus.otel.span.attribute.value.length.limit[quarkus.otel.span.attribute.value.length.limit]`


[.description]
--
The maximum length of span attribute values. Takes precedence over `otel.attribute.value.length.limit`.

By default, there is no limit.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_SPAN_ATTRIBUTE_VALUE_LENGTH_LIMIT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_SPAN_ATTRIBUTE_VALUE_LENGTH_LIMIT+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-opentelemetry-general-config-items_quarkus.otel.span.attribute.count.limit]]`link:#quarkus-opentelemetry-general-config-items_quarkus.otel.span.attribute.count.limit[quarkus.otel.span.attribute.count.limit]`


[.description]
--
The maximum number of attributes per span. Takes precedence over `otel.attribute.count.limit`.

Default is `128`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_SPAN_ATTRIBUTE_COUNT_LIMIT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_SPAN_ATTRIBUTE_COUNT_LIMIT+++`
endif::add-copy-button-to-env-var[]
--|int 
|`128`


a| [[quarkus-opentelemetry-general-config-items_quarkus.otel.span.event.count.limit]]`link:#quarkus-opentelemetry-general-config-items_quarkus.otel.span.event.count.limit[quarkus.otel.span.event.count.limit]`


[.description]
--
The maximum number of events per span.

Default is `128`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_SPAN_EVENT_COUNT_LIMIT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_SPAN_EVENT_COUNT_LIMIT+++`
endif::add-copy-button-to-env-var[]
--|int 
|`128`


a| [[quarkus-opentelemetry-general-config-items_quarkus.otel.span.link.count.limit]]`link:#quarkus-opentelemetry-general-config-items_quarkus.otel.span.link.count.limit[quarkus.otel.span.link.count.limit]`


[.description]
--
The maximum number of links per span.

Default is `128`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_SPAN_LINK_COUNT_LIMIT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_SPAN_LINK_COUNT_LIMIT+++`
endif::add-copy-button-to-env-var[]
--|int 
|`128`


a| [[quarkus-opentelemetry-general-config-items_quarkus.otel.bsp.schedule.delay]]`link:#quarkus-opentelemetry-general-config-items_quarkus.otel.bsp.schedule.delay[quarkus.otel.bsp.schedule.delay]`


[.description]
--
The interval, in milliseconds, between two consecutive exports.

Default is `5000`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_BSP_SCHEDULE_DELAY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_BSP_SCHEDULE_DELAY+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`5S`


a| [[quarkus-opentelemetry-general-config-items_quarkus.otel.bsp.max.queue.size]]`link:#quarkus-opentelemetry-general-config-items_quarkus.otel.bsp.max.queue.size[quarkus.otel.bsp.max.queue.size]`


[.description]
--
The maximum queue size.

Default is `2048`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_BSP_MAX_QUEUE_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_BSP_MAX_QUEUE_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`2048`


a| [[quarkus-opentelemetry-general-config-items_quarkus.otel.bsp.max.export.batch.size]]`link:#quarkus-opentelemetry-general-config-items_quarkus.otel.bsp.max.export.batch.size[quarkus.otel.bsp.max.export.batch.size]`


[.description]
--
The maximum batch size.

Default is `512`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_BSP_MAX_EXPORT_BATCH_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_BSP_MAX_EXPORT_BATCH_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|`512`


a| [[quarkus-opentelemetry-general-config-items_quarkus.otel.bsp.export.timeout]]`link:#quarkus-opentelemetry-general-config-items_quarkus.otel.bsp.export.timeout[quarkus.otel.bsp.export.timeout]`


[.description]
--
The maximum allowed time, in milliseconds, to export data.

Default is `30s`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_BSP_EXPORT_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_BSP_EXPORT_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`30S`


a| [[quarkus-opentelemetry-general-config-items_quarkus.otel.exporter.otlp.traces.endpoint]]`link:#quarkus-opentelemetry-general-config-items_quarkus.otel.exporter.otlp.traces.endpoint[quarkus.otel.exporter.otlp.traces.endpoint]`


[.description]
--
OTLP Exporter specific. Will override `otel.exporter.otlp.endpoint`, if set.

Fallbacks to the legacy property `quarkus.opentelemetry.tracer.exporter.otlp.endpoint<` or defaults to `OtlpExporterRuntimeConfig++#++DEFAULT_GRPC_BASE_URI`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_EXPORTER_OTLP_TRACES_ENDPOINT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_EXPORTER_OTLP_TRACES_ENDPOINT+++`
endif::add-copy-button-to-env-var[]
--|string 
|`http://localhost:4317/`


a| [[quarkus-opentelemetry-general-config-items_quarkus.otel.exporter.otlp.traces.headers]]`link:#quarkus-opentelemetry-general-config-items_quarkus.otel.exporter.otlp.traces.headers[quarkus.otel.exporter.otlp.traces.headers]`


[.description]
--
Key-value pairs to be used as headers associated with gRPC requests. The format is similar to the `OTEL_EXPORTER_OTLP_HEADERS` environment variable, a list of key-value pairs separated by the "=" character. i.e.: key1=value1,key2=value2

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_EXPORTER_OTLP_TRACES_HEADERS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_EXPORTER_OTLP_TRACES_HEADERS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-opentelemetry-general-config-items_quarkus.otel.exporter.otlp.traces.compression]]`link:#quarkus-opentelemetry-general-config-items_quarkus.otel.exporter.otlp.traces.compression[quarkus.otel.exporter.otlp.traces.compression]`


[.description]
--
Sets the method used to compress payloads. If unset, compression is disabled. Currently supported compression methods include `gzip` and `none`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_EXPORTER_OTLP_TRACES_COMPRESSION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_EXPORTER_OTLP_TRACES_COMPRESSION+++`
endif::add-copy-button-to-env-var[]
-- a|
`gzip`, `none` 
|


a| [[quarkus-opentelemetry-general-config-items_quarkus.otel.exporter.otlp.traces.timeout]]`link:#quarkus-opentelemetry-general-config-items_quarkus.otel.exporter.otlp.traces.timeout[quarkus.otel.exporter.otlp.traces.timeout]`


[.description]
--
Sets the maximum time to wait for the collector to process an exported batch of spans. If unset, defaults to `OtlpExporterRuntimeConfig++#++DEFAULT_TIMEOUT_SECS`s.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_EXPORTER_OTLP_TRACES_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_EXPORTER_OTLP_TRACES_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`10S`


a| [[quarkus-opentelemetry-general-config-items_quarkus.otel.exporter.otlp.traces.protocol]]`link:#quarkus-opentelemetry-general-config-items_quarkus.otel.exporter.otlp.traces.protocol[quarkus.otel.exporter.otlp.traces.protocol]`


[.description]
--
OTLP defines the encoding of telemetry data and the protocol used to exchange data between the client and the server. Depending on the exporter, the available protocols will be different.

Currently, only `grpc` and `http` are allowed.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_EXPORTER_OTLP_TRACES_PROTOCOL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_EXPORTER_OTLP_TRACES_PROTOCOL+++`
endif::add-copy-button-to-env-var[]
--|string 
|`grpc`


a| [[quarkus-opentelemetry-general-config-items_quarkus.otel.exporter.otlp.traces.key-cert.keys]]`link:#quarkus-opentelemetry-general-config-items_quarkus.otel.exporter.otlp.traces.key-cert.keys[quarkus.otel.exporter.otlp.traces.key-cert.keys]`


[.description]
--
Comma-separated list of the path to the key files (Pem format).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_EXPORTER_OTLP_TRACES_KEY_CERT_KEYS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_EXPORTER_OTLP_TRACES_KEY_CERT_KEYS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-opentelemetry-general-config-items_quarkus.otel.exporter.otlp.traces.key-cert.certs]]`link:#quarkus-opentelemetry-general-config-items_quarkus.otel.exporter.otlp.traces.key-cert.certs[quarkus.otel.exporter.otlp.traces.key-cert.certs]`


[.description]
--
Comma-separated list of the path to the certificate files (Pem format).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_EXPORTER_OTLP_TRACES_KEY_CERT_CERTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_EXPORTER_OTLP_TRACES_KEY_CERT_CERTS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a| [[quarkus-opentelemetry-general-config-items_quarkus.otel.exporter.otlp.traces.trust-cert.certs]]`link:#quarkus-opentelemetry-general-config-items_quarkus.otel.exporter.otlp.traces.trust-cert.certs[quarkus.otel.exporter.otlp.traces.trust-cert.certs]`


[.description]
--
Comma-separated list of the trust certificate files (Pem format).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OTEL_EXPORTER_OTLP_TRACES_TRUST_CERT_CERTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OTEL_EXPORTER_OTLP_TRACES_TRUST_CERT_CERTS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|

|===
ifndef::no-duration-note[]
[NOTE]
[id='duration-note-anchor-{summaryTableId}']
.About the Duration format
====
To write duration values, use the standard `java.time.Duration` format.
See the link:https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/time/Duration.html#parse(java.lang.CharSequence)[Duration#parse() javadoc] for more information.

You can also use a simplified format, starting with a number:

* If the value is only a number, it represents time in seconds.
* If the value is a number followed by `ms`, it represents time in milliseconds.

In other cases, the simplified format is translated to the `java.time.Duration` format for parsing:

* If the value is a number followed by `h`, `m`, or `s`, it is prefixed with `PT`.
* If the value is a number followed by `d`, it is prefixed with `P`.
====
endif::no-duration-note[]
